# zbo_smart-customer-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  真实接口配置指南.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/actions/: base.py  builtin.py  registry.py
app/api/v1/: routes.py  schemas.py
app/core/: config.py  errors.py  interface_config.py  logging.py
app/db/: models.py
app/domain/: models.py  store.py
app/flows/: conditions.py  executor.py  loader.py  models.py  validator.py
app/graph/: agent.py  builder.py  nodes.py  routes.py  state.py
app/llm/: models.py  parser.py  processor.py  prompt.py  provider.py
app/policies/: base.py  builtin.py  ensemble.py
app/providers/: business.py  factory.py  handoff.py
app/rag/: document.py  models.py  providers.py  retriever.py  service.py  vector_store.py
config/: external_interfaces.example.yaml
data/knowledge/: return_policy.md
flows/: query_order.yaml
tests/e2e/: test_chat_api.py
tests/integration/: test_dialogue_flows.py
tests/unit/: test_core_components.py  test_external_interface_config.py
