[project]
name = "smart-customer-service"
version = "0.1.0"
description = "Enterprise intelligent customer service assistant with Flow, RAG, Provider factories, and Mock mode."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "starlette>=0.41.3,<0.42.0",
    "uvicorn[standard]>=0.30.0,<0.35.0",
    "pydantic>=2.10.4,<2.11.0",
    "pydantic-settings>=2.7.0,<2.8.0",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
    "SQLAlchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "alembic>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
